fix footer positioning + lines svg stretch

--- a/next-app/styles/Footer.module.css
+++ b/next-app/styles/Footer.module.css
@@ -6,6 +6,9 @@
   width: 100%;
   z-index: 999;
   justify-content: space-between;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 .navbar-text-left {
