--- a/next-app/styles/globals.css
+++ b/next-app/styles/globals.css
@@ -8,15 +8,9 @@
   font-family: "Roboto";
 }
 
-.container {
+#container {
   min-height: 100vh;
   position: relative;
-}
-
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
 }
 
 .content {
